stDemoOne/force-app/main/default/objects/xDO_MDC_customListRecord__c/xDO_MDC_customListRecord__c.object-meta.xml
<CustomObject>
    <label>Custom Related List Record</label>
    <nameField>
        <label>Custom Related List Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Related List Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>