stDemoOne/force-app/main/default/objects/xDO_MDC_customListRecord__c/fields/Column_3_Value__c.field-meta.xml
<CustomField>
    <fullName>Column_3_Value__c</fullName>
    <label>Column 3 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>